--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@mapbox/rehype-prism": "^0.8.0",
     "@netlify/plugin-nextjs": "4.14",
     "@tailwindcss/typography": "^0.5.0",
-    "axios": "^0.27.2",
+    "axios": "^1.7.7",
     "classnames": "^2.3.1",
     "cypress": "^10.1.0",
     "gray-matter": "^4.0.2",
@@ -44,5 +44,6 @@
     "netlify-plugin-cypress": "~2.2.0",
     "postcss": "^8.4.4",
     "tailwindcss": "^3.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
